# snipeit-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.py
.github/workflows/: release-image.yml
