[project]
name = "snipeit-mcp"
version = "0.1.0"
description = "MCP server for Snipe-IT inventory management system"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.31.0",
    "snipeit-api @ git+https://github.com/lfctech/snipeit-python-api.git",
]

[tool.uv]
package = false
